fixed solutions contained to be aligned with services container

--- a/css/services.css
+++ b/css/services.css
@@ -1,5 +1,9 @@
+.container{
+    background-color: #ffffff;
+}
+
 .services-sum{
-    width:100;
+    width:95%;
     margin:3%;
     background-color: #ffffff;
     font-size: 1em;
@@ -21,4 +25,5 @@ button{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    align-content: center;
 }
